--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev --turbopack",
+    "dev:clean": "pnpm clean && pnpm dev",
+
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix",
+
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:strict": "next lint --max-warnings 0",
+
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx scripts/seed.ts",
+    "db:reset": "pnpm db:push && pnpm db:seed",
+
     "ui:add": "pnpm dlx shadcn-ui@latest add",
     "ui:update": "pnpm dlx shadcn-ui@latest update"
   },
@@ -18,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.30.1",
+    "@next/eslint-plugin-next": "^15.4.4",
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
@@ -30,6 +45,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-check-file": "^3.2.0",
     "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
